--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -54,11 +54,12 @@ jobs:
         run: |
           hugo \
             --gc --minify \
-            --baseURL "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
+            --baseURL "https://spiewnik.kanski.name"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./public
+  # original --baseURL "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
 
   # Deployment job
   deploy:
